# cmake-package-install

./: CMakeLists.txt  README.md  c_demo.c  f_demo.f90
cmake/: install.cmake
include/: c_demo.h
